--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-template",
+  "name": "ivanms1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,8 +14,7 @@
     "eslint": "^7.32.0",
     "next": "^13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.1.0",
-    "sass": "^1.62.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
@@ -23,20 +22,17 @@
     "@types/react": "18.0.28",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.14",
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "plop": "^3.1.2",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.4",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^6.0.0",
-    "stylelint-order": "^6.0.2",
-    "stylelint-prettier": "^2.0.0",
-    "typescript": "4.8.4",
-    "typescript-plugin-css-modules": "^5.0.1"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "4.8.4"
   },
   "lint-staged": {
     "*.{json,md}": [
@@ -45,9 +41,6 @@
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "./node_modules/.bin/eslint --fix"
-    ],
-    "*.{css,scss}": [
-      "stylelint --fix"
     ]
   }
 }
