--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.2.1",
     "eslint": "^8.42.0",
     "next": "^13.4.5",
+    "next-translate": "2.3.0-canary.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -27,6 +28,7 @@
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "next-translate-plugin": "2.3.0-canary.6",
     "plop": "^3.1.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
