--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "eslint": "^8.42.0",
-    "next": "^13.4.5",
+    "lucide-react": "^0.244.0",
+    "next": "^13.4.6",
     "next-translate": "2.3.0-canary.3",
+    "parse-numeric-range": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-rough-notation": "^1.0.5",
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.3.0",
     "@types/react": "18.2.11",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.5",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
