--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.244.0",
     "next": "^13.4.6",
-    "next-translate": "2.3.0-canary.3",
+    "next-translate": "^2.3.1",
     "parse-numeric-range": "^1.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
