--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "next-translate-plugin": "2.3.0-canary.6",
+    "next-translate-plugin": "^2.3.0",
     "plop": "^3.1.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
