--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.0-beta.4",
+    "@apollo/experimental-nextjs-app-support": "^0.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "graphql": "^16.7.0",
     "lucide-react": "^0.244.0",
     "next": "^13.4.6",
     "parse-numeric-range": "^1.3.0",
@@ -21,10 +26,17 @@
     "react-markdown": "^8.0.7",
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/fragment-matcher": "^5.0.0",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.3.0",
