--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
-    "pre-commit": "lint-staged",
-    "generate": "graphql-codegen --config codegen.yml"
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@apollo/client": "^3.8.0-beta.4",
@@ -20,28 +19,17 @@
     "graphql": "^16.7.0",
     "lucide-react": "^0.244.0",
     "next": "^13.4.6",
-    "parse-numeric-range": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.7",
     "react-rough-notation": "^1.0.5",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^4.0.1",
-    "@graphql-codegen/fragment-matcher": "^5.0.0",
-    "@graphql-codegen/introspection": "^4.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.3.0",
     "@types/react": "18.2.11",
-    "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
